responsive plus on filezilla

--- a/developer.html
+++ b/developer.html
@@ -8,7 +8,7 @@
       src="https://kit.fontawesome.com/82a4221d6a.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="/profile.css" />
+    <link rel="stylesheet" href="profile.css" />
     <title>Profile Card</title>
   </head>
   <body>
@@ -16,7 +16,7 @@
       <div class="row">
         <div class="card">
           <div class="image">
-            <img src="./img/Star_Platinum_The_World foto.webp" />
+            <img src="img/Star_Platinum_The_World foto.webp" alt="star platinum"/>
           </div>
           <div class="details">
             <h2 class="name">Greedy</h2>
