--- a/dutch.html
+++ b/dutch.html
@@ -21,25 +21,25 @@
     <section id="js--checkOutWindow" class="checkOut a-popup">
         <ul class="checkOut__list">
             <li class="checkOut__listItem">
-                <img src="/img/product1nl.webp" alt="champagne" class="checkOut__image">
+                <img src="img/product1nl.webp" alt="MUNT 2 EURO NEDERLAND 2001 BEATRIX" class="checkOut__image">
                 <p class="checkOut__title">MUNT 2 EURO NEDERLAND 2001 BEATRIX</p>
                 <p id="js--amount-champagne1" class="checkOut__amount"></p>
                 <p class="total--price1" id="total--price1"></p>
             </li>
             <li class="checkOut__listItem">
-                <img src="/img/product2nl.webp" alt="champagne" class="checkOut__image">
+                <img src="img/product2nl.webp" alt="MUNT 1 EURO NEDERLAND 2001 BEATRIX" class="checkOut__image">
                 <p class="checkOut__title">MUNT 1 EURO NEDERLAND 2001 BEATRIX</p>
                 <p id="js--amount-champagne2" class="checkOut__amount"></p>
                 <p class="total--price2" id="total--price2"></p>
             </li>
             <li class="checkOut__listItem">
-                <img src="/img/product3nl.webp" alt="champagne" class="checkOut__image">
+                <img src="img/product3nl.webp" alt="KONINGIN BEATRIX 5 EUROCENT" class="checkOut__image">
                 <p class="checkOut__title">KONINGIN BEATRIX 5 EUROCENT</p>
                 <p id="js--amount-champagne3" class="checkOut__amount"></p>
                 <p class="total--price3" id="total--price3"></p>
             </li>
             <li class="checkOut__listItem">
-                <img src="/img/gold2.webp" alt="champagne" class="checkOut__image">
+                <img src="img/gold2.webp" alt="50 CENT EUROMUNT FRANKRIJK 1999" class="checkOut__image">
                 <p class="checkOut__title">50 CENT EUROMUNT FRANKRIJK 1999</p>
                 <p id="js--amount-champagne4" class="checkOut__amount"></p>
                 <p class="total--price4" id="total--price4"></p>
@@ -58,7 +58,7 @@
     <main>
         <ul class="games">
             <li class="games__game a-popup">
-                <figure class="game__figure"><img src="/img/product1nl.webp" alt="champagne" class="game__img"></figure>
+                <figure class="game__figure"><img src="img/product1nl.webp" alt="MUNT 2 EURO NEDERLAND 2001 BEATRIX" class="game__img"></figure>
                 <section class="games__body">
                     <h2 class="games__h2">€399,99</h2>
                     <h3 class="games__h3">MUNT 2 EURO NEDERLAND 2001 BEATRIX</h3>
@@ -82,14 +82,14 @@
                     <div class="game__stars">⭐ ⭐ ⭐ ⭐ ⭐</div>
                     <section class="btn-game">
                     <button data-product="champagne1" class="games__button">Add to Cart</button>
-                    <a href="/productspage.html"><button class="game__button">Details</button></a>
-                    <a href="/productpage1.html"><button class="game__button">Go back</button></a>
+                    <a href="productspage.html"><button class="game__button">Details</button></a>
+                    <a href="productpage1.html"><button class="game__button">Go back</button></a>
                 </section>
               </section>
 
             </li>
             <li class="games__game a-popup">
-                <figure class="game__figure"><img src="/img/product2nl.webp" alt="champagne" class="game__img"></figure>
+                <figure class="game__figure"><img src="img/product2nl.webp" alt="MUNT 1 EURO NEDERLAND 2001 BEATRIX" class="game__img"></figure>
                 <section class="games__body">
                     <h2 class="games__h2">€249,99</h2>
                     <h3 class="games__h3">MUNT 1 EURO NEDERLAND 2001 BEATRIX</h3>
@@ -114,13 +114,13 @@
                     <section class="btn-game">
                     <button data-product="champagne2" class="games__button">Add to Cart</button>
                     <a href=""><button class="game__button">Details</button></a>
-                    <a href="/productpage1.html"><button class="game__button">Go back</button></a>
+                    <a href="productpage1.html"><button class="game__button">Go back</button></a>
                 </section>
               </section>
 
             </li>
             <li class="games__game a-popup">
-                <figure class="game__figure"><img src="/img/product3nl.webp" alt="champagne" class="game__img"></figure>
+                <figure class="game__figure"><img src="img/product3nl.webp" alt="KONINGIN BEATRIX 5 EUROCENT" class="game__img"></figure>
                 <section class="games__body">
                     <h2 class="games__h2">€149,99</h2>
                     <h3 class="games__h3">KONINGIN BEATRIX 5 EUROCENT</h3>
@@ -145,13 +145,13 @@
                     <section class="btn-game">
                     <button data-product="champagne3" class="games__button">Add to Cart</button>
                     <a href=""><button class="game__button">Details</button></a>
-                    <a href="/productpage1.html"><button class="game__button">Go back</button></a>
+                    <a href="productpage1.html"><button class="game__button">Go back</button></a>
                 </section>
               </section>
 
             </li>
             <li class="games__game a-popup">
-                <figure class="game__figure"><img src="/img/gold2.webp" alt="champagne" class="game__img"></figure>
+                <figure class="game__figure"><img src="img/gold2.webp" alt="50 CENT EUROMUNT FRANKRIJK 1999" class="game__img"></figure>
                 <section class="games__body">
                     <h2 class="games__h2">€99,99</h2>
                     <h3 class="games__h3">50 CENT EUROMUNT FRANKRIJK 1999</h3>
@@ -175,8 +175,8 @@
                     <div class="game__stars">⭐ ⭐ ⭐ ⭐ ⭐</div>
                     <section class="btn-game">
                     <button data-product="champagne4" class="games__button">Add to Cart</button>
-                    <a href="/productpage2.html"><button class="game__button">Details</button></a>
-                    <a href="/productpage1.html"><button class="game__button">Go back</button></a>
+                    <a href=""><button class="game__button">Details</button></a>
+                    <a href="productpage1.html"><button class="game__button">Go back</button></a>
                 </section>
               </section>
 
