--- a/goldpage.html
+++ b/goldpage.html
@@ -21,25 +21,25 @@
     <section id="js--checkOutWindow" class="checkOut a-popup">
         <ul class="checkOut__list">
             <li class="checkOut__listItem">
-                <img src="/img/gold1.webp" alt="champagne" class="checkOut__image">
+                <img src="img/gold1.webp" alt="2 Euro 2000, Juan Carlos I spain" class="checkOut__image">
                 <p class="checkOut__title">2 Euro 2000, Juan Carlos I spain</p>
                 <p id="js--amount-champagne1" class="checkOut__amount"></p>
                 <p class="total--price1" id="total--price1"></p>
             </li>
             <li class="checkOut__listItem">
-                <img src="/img/gold2.webp" alt="champagne" class="checkOut__image">
+                <img src="img/gold2.webp" alt="50 cent euromunt Frankrijk 1999" class="checkOut__image">
                 <p class="checkOut__title">50 cent euromunt Frankrijk 1999</p>
                 <p id="js--amount-champagne2" class="checkOut__amount"></p>
                 <p class="total--price2" id="total--price2"></p>
             </li>
             <li class="checkOut__listItem">
-                <img src="/img/gold3.webp" alt="champagne" class="checkOut__image">
+                <img src="img/gold3.webp" alt="Duitsland 2 Euro F = Stuttgart" class="checkOut__image">
                 <p class="checkOut__title">Duitsland 2 Euro F = Stuttgart</p>
                 <p id="js--amount-champagne3" class="checkOut__amount"></p>
                 <p class="total--price3" id="total--price3"></p>
             </li>
             <li class="checkOut__listItem">
-                <img src="/img/product3nl.webp" alt="champagne" class="checkOut__image">
+                <img src="img/product3nl.webp" alt="KONINGIN BEATRIX 5 EUROCENT" class="checkOut__image">
                 <p class="checkOut__title">KONINGIN BEATRIX 5 EUROCENT</p>
                 <p id="js--amount-champagne4" class="checkOut__amount"></p>
                 <p class="total--price4" id="total--price4"></p>
@@ -58,7 +58,7 @@
     <main>
         <ul class="games">
             <li class="games__game a-popup">
-                <figure class="game__figure"><img src="/img/gold1.webp" alt="champagne" class="game__img"></figure>
+                <figure class="game__figure"><img src="img/gold1.webp" alt="2 Euro 2000, Juan Carlos I spain" class="game__img"></figure>
                 <section class="games__body">
                     <h2 class="games__h2">€224,99</h2>
                     <h3 class="games__h3">2 Euro 2000, Juan Carlos I spain</h3>
@@ -83,12 +83,12 @@
                     <section class="btn-game">
                     <button data-product="champagne1" class="games__button">Add to Cart</button>
                     <a href=""><button class="game__button">Details</button></a>
-                    <a href="/productpage1.html"><button class="game__button">Go back</button></a>
+                    <a href="productpage1.html"><button class="game__button">Go back</button></a>
                 </section>
               </section>
             </li>
             <li class="games__game a-popup">
-                <figure class="game__figure"><img src="/img/gold2.webp" alt="champagne" class="game__img"></figure>
+                <figure class="game__figure"><img src="img/gold2.webp" alt="50 cent euromunt Frankrijk 1999" class="game__img"></figure>
                 <section class="games__body">
                     <h2 class="games__h2">€99,99</h2>
                     <h3 class="games__h3">50 cent euromunt Frankrijk 1999</h3>
@@ -113,13 +113,13 @@
                     <section class="btn-game">
                     <button data-product="champagne2" class="games__button">Add to Cart</button>
                     <a href=""><button class="game__button">Details</button></a>
-                    <a href="/productpage1.html"><button class="game__button">Go back</button></a>
+                    <a href="productpage1.html"><button class="game__button">Go back</button></a>
                 </section>
               </section>
 
             </li>
             <li class="games__game a-popup">
-                <figure class="game__figure"><img src="/img/gold3.webp" alt="champagne" class="game__img"></figure>
+                <figure class="game__figure"><img src="img/gold3.webp" alt="Duitsland 2 Euro F = Stuttgart" class="game__img"></figure>
                 <section class="games__body">
                     <h2 class="games__h2">€224,99</h2>
                     <h3 class="games__h3">Duitsland 2 Euro F = Stuttgart</h3>
@@ -144,13 +144,13 @@
                     <section class="btn-game">
                     <button data-product="champagne3" class="games__button">Add to Cart</button>
                     <a href=""><button class="game__button">Details</button></a>
-                    <a href="/productpage1.html"><button class="game__button">Go back</button></a>
+                    <a href="productpage1.html"><button class="game__button">Go back</button></a>
                 </section>
               </section>
 
             </li>
             <li class="games__game a-popup">
-                <figure class="game__figure"><img src="/img/product3nl.webp" alt="champagne" class="game__img"></figure>
+                <figure class="game__figure"><img src="img/product3nl.webp" alt="KONINGIN BEATRIX 5 EUROCENT" class="game__img"></figure>
                 <section class="games__body">
                     <h2 class="games__h2">€149,99</h2>
                     <h3 class="games__h3">KONINGIN BEATRIX 5 EUROCENT</h3>
@@ -175,7 +175,7 @@
                     <section class="btn-game">
                     <button data-product="champagne4" class="games__button">Add to Cart</button>
                     <a href=""><button class="game__button">Details</button></a>
-                    <a href="/productpage1.html"><button class="game__button">Go back</button></a>
+                    <a href="productpage1.html"><button class="game__button">Go back</button></a>
                 </section>
               </section>
 
