--- a/silverpage.html
+++ b/silverpage.html
@@ -21,25 +21,25 @@
     <section id="js--checkOutWindow" class="checkOut a-popup">
         <ul class="checkOut__list">
             <li class="checkOut__listItem">
-                <img src="/img/silver1.webp" alt="champagne" class="checkOut__image">
+                <img src="img/silver1.webp" alt="2022 ST. HELENA 1 OZ SILVER QUEENS COIN" class="checkOut__image">
                 <p class="checkOut__title">2022 ST. HELENA 1 OZ SILVER QUEENS COIN</p>
                 <p id="js--amount-champagne1" class="checkOut__amount"></p>
                 <p class="total--price1" id="total--price1"></p>
             </li>
             <li class="checkOut__listItem">
-                <img src="/img/silver2.webp" alt="champagne" class="checkOut__image">
+                <img src="img/silver2.webp" alt="AUSTRALIA SILVER COIN 2017 KOALA ELIZABETH II" class="checkOut__image">
                 <p class="checkOut__title">AUSTRALIA SILVER COIN 2017 KOALA ELIZABETH II</p>
                 <p id="js--amount-champagne2" class="checkOut__amount"></p>
                 <p class="total--price2" id="total--price2"></p>
             </li>
             <li class="checkOut__listItem">
-                <img src="/img/silver3.webp" alt="champagne" class="checkOut__image">
+                <img src="img/silver3.webp" alt="Duitsland 2 Euro F = Stuttgart" class="checkOut__image">
                 <p class="checkOut__title">Duitsland 2 Euro F = Stuttgart</p>
                 <p id="js--amount-champagne3" class="checkOut__amount"></p>
                 <p class="total--price3" id="total--price3"></p>
             </li>
             <li class="checkOut__listItem">
-                <img src="/img/banknotes3.webp" alt="champagne" class="checkOut__image">
+                <img src="img/banknotes3.webp" alt="BANKNOTE CHINA 10 YEN - DRAGON - ND 1939" class="checkOut__image">
                 <p class="checkOut__title">BANKNOTE CHINA 10 YEN - DRAGON - ND 1939</p>
                 <p id="js--amount-champagne4" class="checkOut__amount"></p>
                 <p class="total--price4" id="total--price4"></p>
@@ -58,7 +58,7 @@
     <main>
         <ul class="games">
             <li class="games__game a-popup">
-                <figure class="game__figure"><img src="/img/silver1.webp" alt="champagne" class="game__img"></figure>
+                <figure class="game__figure"><img src="img/silver1.webp" alt="2022 ST. HELENA 1 OZ SILVER QUEENS COIN" class="game__img"></figure>
                 <section class="games__body">
                     <h2 class="games__h2">€34,99</h2>
                     <h3 class="games__h3">2022 ST. HELENA 1 OZ SILVER QUEENS COIN</h3>
@@ -89,7 +89,7 @@
 
             </li>
             <li class="games__game a-popup">
-                <figure class="game__figure"><img src="/img/silver2.webp" alt="champagne" class="game__img"></figure>
+                <figure class="game__figure"><img src="img/silver2.webp" alt="AUSTRALIA SILVER COIN 2017 KOALA ELIZABETH II" class="game__img"></figure>
                 <section class="games__body">
                     <h2 class="games__h2">€34,99</h2>
                     <h3 class="games__h3">AUSTRALIA SILVER COIN 2017 KOALA ELIZABETH II</h3>
@@ -120,7 +120,7 @@
 
             </li>
             <li class="games__game a-popup">
-                <figure class="game__figure"><img src="/img/silver3.webp" alt="champagne" class="game__img"></figure>
+                <figure class="game__figure"><img src="img/silver3.webp" alt="1 TROY OUNCE SILVER COIN MAPLE LEAF" class="game__img"></figure>
                 <section class="games__body">
                     <h2 class="games__h2">€44,99</h2>
                     <h3 class="games__h3">1 TROY OUNCE SILVER COIN MAPLE LEAF</h3>
@@ -151,7 +151,7 @@
 
             </li>
             <li class="games__game a-popup">
-                <figure class="game__figure"><img src="/img/banknotes3.webp" alt="champagne" class="game__img"></figure>
+                <figure class="game__figure"><img src="img/banknotes3.webp" alt="BANKNOTE CHINA 10 YEN - DRAGON - ND 1939" class="game__img"></figure>
                 <section class="games__body">
                     <h2 class="games__h2">€2500</h2>
                     <h3 class="games__h3">BANKNOTE CHINA 10 YEN - DRAGON - ND 1939</h3>
@@ -175,8 +175,8 @@
                     <div class="game__stars">⭐ ⭐ ⭐ ⭐ ⭐</div>
                     <section class="btn-game">
                     <button data-product="champagne4" class="games__button">Add to Cart</button>
-                    <a href="/productpage2.html"><button class="game__button">Details</button></a>
-                    <a href="/productpage1.html"><button class="game__button">Go back</button></a>
+                    <a href="productpage2.html"><button class="game__button">Details</button></a>
+                    <a href="productpage1.html"><button class="game__button">Go back</button></a>
                 </section>
               </section>
 
