--- a/productpage1.html
+++ b/productpage1.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/productpage1.css">
-  <script src="/productpage1.js" defer></script>
+  <link rel="stylesheet" href="productpage1.css">
+  <script src="productpage1.js" defer></script>
   <script src="https://kit.fontawesome.com/31ba87c7ce.js" crossorigin="anonymous"></script>
   <!---boxicons-->
 
@@ -23,7 +23,7 @@
   <header>
 
     <article class="logo">
-      <img src="/img/logo7.webp" alt="">
+      <img src="img/logo7.webp" alt="The logo of Greedy's">
     </article>
 
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
@@ -31,7 +31,7 @@
     
 
     <article class="cart">
-      <a href="/dutch.html"><i class="fa-solid fa-cart-shopping"></i></a>
+      <a href="dutch.html"><i class="fa-solid fa-cart-shopping"></i></a>
     </article>
 
 
@@ -43,11 +43,11 @@
   </header>
   <ul class="navlist">
 
-    <li><a href="/html/main.html">Home</a></li>
-    <li><a href="/about-us.html">Aboutus</a></li>
-    <li><a href="/info.html">Information</a></li>
-    <li><a href="/contact.html">Contact</a></li>
-    <li><a href="/developer.html">Developers</a></li>
+    <li><a href="main.html">Home</a></li>
+    <li><a href="about-us.html">Aboutus</a></li>
+    <li><a href="info.html">Information</a></li>
+    <li><a href="contact.html">Contact</a></li>
+    <li><a href="developer.html">Developers</a></li>
     
 
 
@@ -55,7 +55,7 @@
 
   <nav>
     <ul class="nav-menu">
-      <li class="norm li-1"><a href="html/main.html">Home</a></li>
+      <li class="norm li-1"><a href="main.html">Home</a></li>
       <li class="norm li-1"><a href="about-us.html">About us</a></li>
       <li class="norm li-1"><a href="info.html">Information</a></li>
       <li class="norm li-1"><a href="productpage1.html">Prices</a></li>
@@ -141,7 +141,7 @@
 
       <section class="part--section">
         <li class="part" data-category="part--1"><img src="img/product1nl.webp"
-            alt="figuurtje van de stand Joseph joestar"></li>
+            alt="Munt 2 euro Nederland 2001 BEATRIX"></li>
         <p>Munt 2 euro Nederland 2001 BEATRIX</p>
         <a href="dutch.html">
           <h2>Op vooraad > </h2>
@@ -161,7 +161,7 @@
 
       <section class="part--section">
         <li class="part" data-category="part--4"><img src="img/banknotes1.webp"
-            alt="figuurtje van de stand Crazy Diamond"></li>
+            alt="100 Gulden Snip 1977 ZFr+"></li>
         <p>100 Gulden "Snip" 1977 ZFr+</p>
         <a href="banknotes.html">
           <h2>Op vooraad > </h2>
@@ -173,7 +173,7 @@
       </section>
 
       <section class="part--section">
-        <li class="part" data-category="part--3"><img src="img/silver1.webp" alt="figuurtje van DIO"></li>
+        <li class="part" data-category="part--3"><img src="img/silver1.webp" alt="2022 St. Helena 1 oz Silver Queens Coin"></li>
         <p>2022 St. Helena 1 oz Silver Queens Coin</p>
         <a href="silverpage.html">
           <h2>Op vooraad </h2>
@@ -187,7 +187,7 @@
 
       <section class="part--section">
         <li class="part" data-category="part--1"><img src="img/product2nl.webp"
-            alt="figuurtje van de stand Joseph joestar"></li>
+            alt="Munt 1 euro Nederland 2001 BEATRIX"></li>
         <p>Munt 1 euro Nederland 2001 BEATRIX</p>
         <a href="dutch.html">
           <h2>Op vooraad > </h2>
@@ -200,7 +200,7 @@
       </section>
 
       <section class="part--section">
-        <li class="part" data-category="part--2"><img src="img/gold1.webp" alt="figuurtje van Esidisi"></li>
+        <li class="part" data-category="part--2"><img src="img/gold1.webp" alt="2 Euro 2000, Juan Carlos I spain"></li>
         <p>2 Euro 2000, Juan Carlos I spain</p>
         <a href="goldpage.html">
           <h2>Op vooraad > </h2>
@@ -214,7 +214,7 @@
 
       <section class="part--section">
         <li class="part" data-category="part--4"><img src="img/banknotes2.webp"
-            alt="figuurtje van de stand Crazy Diamond"></li>
+            alt="Netherlands 1000 Gulden Banknote 1972"></li>
         <p>Netherlands 1000 Gulden Banknote 1972</p>
         <a href="banknotes.html">
           <h2>Op vooraad > </h2>
@@ -227,7 +227,7 @@
 
       <section class="part--section">
         <li class="part" data-category="part--1"><img src="img/product3nl.webp"
-            alt="figuurtje van de stand Joseph joestar"></li>
+            alt="Koningin Beatrix 5 EuroCent"></li>
         <p>Koningin Beatrix 5 EuroCent</p>
         <a href="dutch.html">
           <h2>Op vooraad > </h2>
@@ -239,7 +239,7 @@
 
       </section>
       <section class="part--section">
-        <li class="part" data-category="part--2"><img src="img/gold2.webp" alt="figuurtje van de stand Joseph joestar">
+        <li class="part" data-category="part--2"><img src="img/gold2.webp" alt="50 cent euromunt Frankrijk 1999">
         </li>
         <p>50 cent euromunt Frankrijk 1999</p>
         <a href="goldpage.html">
@@ -253,7 +253,7 @@
       </section>
 
       <section class="part--section">
-        <li class="part" data-category="part--3"><img src="img/silver2.webp" alt="figuurtje van de stand Jotaro Kujo">
+        <li class="part" data-category="part--3"><img src="img/silver2.webp" alt="Australia Silver Coin 2017 Koala Elizabeth II">
         </li>
         <p>Australia Silver Coin 2017 Koala Elizabeth II</p>
         <a href="silverpage.html">
@@ -268,7 +268,7 @@
 
       <section class="part--section">
         <li class="part" data-category="part--4"><img src="img/banknotes3.webp"
-            alt="figuurtje van de stand Killer Queen"></li>
+            alt="Banknote China 10 Yen - Dragon - ND 1939"></li>
         <p>Banknote China 10 Yen - Dragon - ND 1939</p>
         <a href="banknotes.html">
           <h2>Op vooraad > </h2>
@@ -284,7 +284,7 @@
       </section>
 
       <section class="part--section">
-        <li class="part" data-category="part--2"><img src="img/gold3.webp" alt="figuurtje van de stand Joseph joestar">
+        <li class="part" data-category="part--2"><img src="img/gold3.webp" alt="Duitsland 2 Euro F = Stuttgart">
         </li>
         <p>Duitsland 2 Euro F = Stuttgart</p>
         <a href="goldpage.html">
@@ -300,7 +300,7 @@
 
       <section class="part--section">
         <li class="part" data-category="part--3"><img src="img/silver3.webp"
-            alt="figuurtje van de stand The World - Limited Edition"></li>
+            alt="1 troy ounce silver coin Maple Leaf"></li>
         <p>1 troy ounce silver coin Maple Leaf</p>
         <a href="silverpage.html">
           <h2>Op vooraad > </h2>
@@ -320,7 +320,7 @@
   <footer>
     <article class="row">
       <section class="col">
-        <img src="/img/logo7.webp" alt="" class="logo">
+        <img src="img/logo7.webp" alt="The logo of Greedy's" class="logo">
         <p>My name is greedy and we sell the best coins with quality in town if you want to know more about us then go
           to our information page you can find it on your right or on top of the website we hope to see you soon.</p>
       </section>
@@ -338,14 +338,12 @@
         <h3>Links <div class="underline"><span></span></div>
         </h3>
         <ul>
-          <li><a href="/html/main.html">Home</a></li>
-          <li><a href="/about-us.html">About-us</a></li>
+          <li><a href="main.html">Home</a></li>
+          <li><a href="about-us.html">About-us</a></li>
           <li><a href="info.html">Information</a></li>
-          <li><a href="/productpage1.html">Products page</a></li>
-          <li><a href="/developer.html">Developers</a></li>
-          <li><a href="/contact.html">contact</a></li>
-          <li><a href="#">Location</a></li>
-          <li><a href="/login.html">Log-in</a></li>
+          <li><a href="productpage1.html">Products page</a></li>
+          <li><a href="developer.html">Developers</a></li>
+          <li><a href="contact.html">contact</a></li>
         </ul>
       </section>
       <section class="col">
