laatse push van het jaar

--- a/banknotes.html
+++ b/banknotes.html
@@ -21,25 +21,25 @@
     <section id="js--checkOutWindow" class="checkOut a-popup">
         <ul class="checkOut__list">
             <li class="checkOut__listItem">
-                <img src="img/banknotes1.webp" alt="100 Gulden Snip 1977 ZFr+" class="checkOut__image">
+                <img src="img/banknotes1.webp" alt="2 Euro 2000, Juan Carlos I spain" class="checkOut__image">
                 <p class="checkOut__title">100 GULDEN "SNIP" 1977 ZFR+</p>
                 <p id="js--amount-champagne1" class="checkOut__amount"></p>
                 <p class="total--price1" id="total--price1"></p>
             </li>
             <li class="checkOut__listItem">
-                <img src="img/banknotes2.webp" alt="NETHERLANDS 1000 GULDEN BANKNOTE 197" class="checkOut__image">
-                <p class="checkOut__title">NETHERLANDS 1000 GULDEN BANKNOTE 1972</p>
+                <img src="img/banknotes2.webp" alt="50 cent euromunt Frankrijk 1999" class="checkOut__image">
+                <p class="checkOut__title">NETHERLANDS 1000 GULDEN BANKNOTE 197</p>
                 <p id="js--amount-champagne2" class="checkOut__amount"></p>
                 <p class="total--price2" id="total--price2"></p>
             </li>
             <li class="checkOut__listItem">
-                <img src="img/banknotes3.webp" alt="BANKNOTE CHINA 10 YEN - DRAGON - ND 1939" class="checkOut__image">
+                <img src="img/banknotes3.webp" alt="Duitsland 2 Euro F = Stuttgart" class="checkOut__image">
                 <p class="checkOut__title">BANKNOTE CHINA 10 YEN - DRAGON - ND 1939</p>
                 <p id="js--amount-champagne3" class="checkOut__amount"></p>
                 <p class="total--price3" id="total--price3"></p>
             </li>
             <li class="checkOut__listItem">
-                <img src="img/silver3.webp" alt="1 TROY OUNCE SILVER COIN MAPLE LEAF" class="checkOut__image">
+                <img src="img/silver3.webp" alt="KONINGIN BEATRIX 5 EUROCENT" class="checkOut__image">
                 <p class="checkOut__title">1 TROY OUNCE SILVER COIN MAPLE LEAF</p>
                 <p id="js--amount-champagne4" class="checkOut__amount"></p>
                 <p class="total--price4" id="total--price4"></p>
@@ -58,7 +58,7 @@
     <main>
         <ul class="games">
             <li class="games__game a-popup">
-                <figure class="game__figure"><img src="img/banknotes1.webp" alt="100 GULDEN SNIP 1977 ZFR+ class="game__img"></figure>
+                <figure class="game__figure"><img src="img/banknotes1.webp" alt="2 Euro 2000, Juan Carlos I spain" class="game__img"></figure>
                 <section class="games__body">
                     <h2 class="games__h2">€69,99</h2>
                     <h3 class="games__h3">100 GULDEN "SNIP" 1977 ZFR+</h3>
@@ -88,7 +88,7 @@
               </section>
             </li>
             <li class="games__game a-popup">
-                <figure class="game__figure"><img src="img/banknotes2.webp" alt="NETHERLANDS 1000 GULDEN BANKNOTE 197" class="game__img"></figure>
+                <figure class="game__figure"><img src="img/banknotes2.webp" alt="50 cent euromunt Frankrijk 1999" class="game__img"></figure>
                 <section class="games__body">
                     <h2 class="games__h2">€174,99</h2>
                     <h3 class="games__h3">NETHERLANDS 1000 GULDEN BANKNOTE 197</h3>
@@ -116,9 +116,10 @@
                     <a href="productpage1.html"><button class="game__button">Go back</button></a>
                 </section>
               </section>
+
             </li>
             <li class="games__game a-popup">
-                <figure class="game__figure"><img src="img/banknotes3.webp" alt="BANKNOTE CHINA 10 YEN - DRAGON - ND 1939" class="game__img"></figure>
+                <figure class="game__figure"><img src="img/banknotes3.webp" alt="Duitsland 2 Euro F = Stuttgart" class="game__img"></figure>
                 <section class="games__body">
                     <h2 class="games__h2">€2500</h2>
                     <h3 class="games__h3">BANKNOTE CHINA 10 YEN - DRAGON - ND 1939</h3>
@@ -142,14 +143,14 @@
                     <div class="game__stars">⭐ ⭐ ⭐ ⭐ ⭐</div>
                     <section class="btn-game">
                     <button data-product="champagne3" class="games__button">Add to Cart</button>
-                    <a href="productspage1.html"><button class="game__button">Details</button></a>
+                    <a href=""><button class="game__button">Details</button></a>
                     <a href="productpage1.html"><button class="game__button">Go back</button></a>
                 </section>
               </section>
 
             </li>
             <li class="games__game a-popup">
-                <figure class="game__figure"><img src="img/silver3.webp" alt="1 TROY OUNCE SILVER COIN MAPLE LEAF" class="game__img"></figure>
+                <figure class="game__figure"><img src="img/silver3.webp" alt="KONINGIN BEATRIX 5 EUROCENT" class="game__img"></figure>
                 <section class="games__body">
                     <h2 class="games__h2">€44,99</h2>
                     <h3 class="games__h3">1 TROY OUNCE SILVER COIN MAPLE LEAF</h3>
